# openapi.yaml
@@ -19,7 +19,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserSignup'
+              $ref: '#/components/schemas/UserCredential'
       responses:
         "200":
           description: User successfully signed up.
@@ -50,7 +50,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserSignup'
+              $ref: '#/components/schemas/UserCredential'
       responses:
         "200":
           description: User successfully log in.
@@ -74,6 +74,35 @@ paths:
       responses:
         "200":
           description: User successfully logged out.
+  /api/users/{userId}:
+    get:
+      operationId: Get user
+      description: Get user
+      summary: get user
+      tags:
+        - user
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          schema:
+            type: integer
+            x-go-type: uint
+          x-go-name: userID
+          description: ID of the user to retrieve its data
+      responses:
+        "200":
+          description: User retrieved
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        "404":
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/posts:
     get:
       operationId: Get posts
@@ -259,7 +288,7 @@ components:
         isAdmin:
           type: boolean
           description: Whether the user is admin or not
-    UserSignup:
+    UserCredential:
       type: object
       required:
         - username
